--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,4 +12,18 @@ body {
     BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
     "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  background-color: #181b27;
+}
+
+footer {
+  background-color: #1e212a;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+  width: 100%;
+}
+
+footer p {
+  margin: 0;
+  font-size: 14px;
 }
